<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.QiblatFinder2.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.QiblatFinder2.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section_id"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        style="@style/AppWidgetLabel">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/appwidget_id_label"
            style="@style/AppWidgetLabel"
            android:text="@string/widget_id_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/appwidget_id"
            style="@style/AppWidgetText"
            android:gravity="end"
            android:text="__"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secttion_update"
        style="@style/AppWidgetSection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/section_id"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appwidget_update_label"
            android:text="@string/widget_update_label"
            style="@style/AppWidgetLabel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appwidget_count"
            style="@style/AppWidgetText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppWidgetText"
            android:id="@+id/appwidget_update"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secttion_latling"
        style="@style/AppWidgetSection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/secttion_update"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_location_label"
            style="@style/AppWidgetLabelCenter"
            android:text="@string/my_location_label_widget"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latitude_label"
            style="@style/AppWidgetLabel"
            android:text="@string/latitude_widget"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latitude_value"
            style="@style/AppWidgetLabel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/longitude_label"
            style="@style/AppWidgetLabel"
            android:text="@string/longitude_widget"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/longitude_value"
            style="@style/AppWidgetLabel"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_update"
        style="@style/AppWidgetButton"
        android:layout_below="@id/secttion_latling"
        android:layout_centerHorizontal="true"
        android:text="@string/widget_button_update"/>
</RelativeLayout>